UI: optimize UI effect

--- a/src/app/components/first/first.component.less
+++ b/src/app/components/first/first.component.less
@@ -44,6 +44,10 @@
   box-shadow      : 0 0 5px 2px rgb(207, 204, 204);
 }
 
+.ch-panel:hover {
+  cursor: pointer;
+}
+
 .hr-dashed {
   border    : 0;
   border-top: 1px dashed #a2a9b6;
@@ -67,10 +71,6 @@
   background-size  : contain;
   background-repeat: no-repeat;
   background-image : url("../../../assets/example.svg");
-}
-
-.icon-example:hover {
-  cursor: pointer;
 }
 
 .icon-arrange {
