--- a/src/app/components/first/first.component.html
+++ b/src/app/components/first/first.component.html
@@ -8,9 +8,9 @@
   </div>
 </div>
 <div class="sp-panel">
-  <div class="ch-panel border">
+  <div class="ch-panel border" (click)="header.goExample()">
     <div style="display: flex;align-items: center;justify-content: space-between;">
-      <div class="first-icon icon-example" (click)="header.goExample()">
+      <div class="first-icon icon-example">
       </div>
       <div class="title-ch-panel">
         {{ 'example' | translate}}
@@ -21,9 +21,9 @@
       {{ 'first.introductionExample' | translate}}
     </div>
   </div>
-  <div class="ch-panel border">
+  <div class="ch-panel border" (click)="header.goMain()">
     <div style="display: flex;align-items: center;justify-content: space-between;">
-      <div class="first-icon icon-arrange" (click)="header.goMain()">
+      <div class="first-icon icon-arrange">
       </div>
       <div class="title-ch-panel">
         {{ 'arrange' | translate}}
@@ -34,9 +34,9 @@
       {{ 'first.introductionGraph' | translate}}
     </div>
   </div>
-  <div class="ch-panel border">
+  <div class="ch-panel border" (click)="header.goTask()">
     <div style="display: flex;align-items: center;justify-content: space-between;">
-      <div class="first-icon icon-task" (click)="header.goTask()">
+      <div class="first-icon icon-task">
       </div>
       <div class="title-ch-panel">
         {{ 'task' | translate}}
